# TAPL

./: .env.example  .gitignore  README.md  pyproject.toml  questions_sites_web.txt  requirements.txt
docs/: TODO.md  final_iter_options copy.md  final_iter_options.md  vitacora.md
memoria/: memoria.tex
misc/: questions_sites_web.txt
report/: graphs.py  main.bib  main.synctex(busy)  main.tex
scripts/: check_books.py  load_db.sh  run_app.sh  upload_books.py
src/database/: vector_db.pkl  vector_db.py
src/project/: app.py  rag.py  utils.py
src/project/agents/root_agent/: agent.py
src/project/metrics/: evaluator.py  explanation_service.py  feedback_service.py  metrics.py  performance_analyzer.py
src/project/models/: model.py
src/project/rag/: __init__.py  answer_generator.py  gemini_rag_service.py  question_generator.py  rag.py
src/project/rag/utils/: __init__.py  dataset_readers.py
src/project/static/: style.css
src/project/static/css/: style.css
src/project/static/js/: api.js  icons.js  interview.js  results.js
src/project/templates/: answer.html  ask.html  index.html  results.html
src/project/tools/: agent.py  tools.py
src/scraper/: coachquant_all.jsonl
src/scraper/scraper/: settings.py
src/scraper/scraper/spiders/: coachquant.py
tests/: run_test.sh  test_gemini.py  test_loading_data.py  test_rag.py
