[project]
name = "project"
version = "0.1.0"
description = ""
authors = [
    {name = "Pablo Chantada Saborido",email = "pablo.chantada@diverger.ai"}
]
readme = "README.md"
requires-python = ">=3.10,<3.15"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "pydantic (>=2.11.10,<3.0.0)",
    "jsonschema (>=4.25.1,<5.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "fastapi[all] (>=0.118.0,<0.119.0)",
    "uvicorn[standart] (>=0.37.0,<0.38.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "pytest (>=8.4.2,<9.0.0)",
    "google-adk (>=1.16.0,<2.0.0)",
    "transformers (>=4.57.1,<5.0.0)",
    "datasets (>=4.2.0,<5.0.0)",
    "langchain-community (>=0.4,<0.5)",
    "langchain (>=1.0.2,<2.0.0)",
    "langchain-text-splitters (>=1.0.0,<2.0.0)",
    "google-genai (>=1.46.0,<2.0.0)",   
    "sentence-transformers (>=5.1.1,<6.0.0)",
    "chromadb (>=1.2.1,<2.0.0)",
    "torch (>=2.9.0,<3.0.0)",
    "torchvision (>=0.24.0,<0.25.0)",
    "torchaudio (>=2.9.0,<3.0.0)",
    "openai (>=2.6.0,<3.0.0)",
    "google-generativeai (>=0.8.5,<0.9.0)",
    "evaluate (>=0.4.6,<0.5.0)",
    "absl-py (>=2.3.1,<3.0.0)",
    "rouge-score (>=0.1.2,<0.2.0)",
    "nltk (>=3.9.2,<4.0.0)",
    "bert-score (>=0.3.13,<0.4.0)",
    "spacy (>=3.8.11,<4.0.0)",
    "keybert (>=0.9.0,<0.10.0)",
    "sympy (>=1.14.0,<2.0.0)",
]
[tool.poetry]
packages = [{include = "project", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
